# Flask

./: .gitignore  pyproject.toml
Homework_1/: app.py
Homework_1/static/style/: style.css
Homework_1/templates/: base.html  clothes.html  contact.html  index.html  info.html  item.html  shoes.html
Homework_2/: TASK.md  app.py
Homework_2/static/styles/: style.css
Homework_2/templates/: 404.html  505.html  base.html  identification.html  index.html
Homework_3/: app.py  forms.py  models.py  wsgi.py
Homework_3/migrations/versions/: 00ab3d84f54f_.py
Homework_3/templates/: index.html  login.html  registration.html
Homework_4/: file_downloader.py  main.py
Homework_5/: app.py  asgi.py  homework5.db  models.py
Homework_6/: MOCK_DATA.csv  app.py  app2.py  app3.py  asgi.py  db_init.py  models.py  pyproject.toml  schemas.py  services.py
Lesson_1/: app.py  wsgi.py
Lesson_1/templates/: about.html  base.html  contact.html  index.html  news.html  students.html
Lesson_2/: app.py
Lesson_2/static/style/: style.css
Lesson_2/templates/: base.html  form_task_2.html  index.html  task_1.html  task_2.html  task_3.html  task_4.html  task_5.html  task_6.html  task_7.html  task_8.html
Lesson_3/: models.py  task1.py  wsgi.py
Lesson_3/migrations/versions/: 3d61f24592f4_.py  5abf3e68e6e2_.py  76bf7e973de3_.py  8e8dfde5c97a_.py  a8f290c41ae8_.py  e8c4cad1f7c7_.py
Lesson_3/static/: style.css
Lesson_3/templates/: index.html  login.html  registration.html  task1.tpl  task2.tpl  task3.tpl
Lesson_4/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py
Lesson_5/: app.py  app2.py  app3.py  asgi.py  models.py
Lesson_5/templates/: base.html  home.html
Lesson_6/: app.py  asgi.py  db_init.py  models.py  pyproject.toml  schemas.py  tools.py
