[tool.poetry]
name = "flask/fastAPI"
version = "0.1.0"
description = ""
authors = ["Maksim Aleksanin <maksim.g00gle@gmail.com>"]
license = "no liscense"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11, <3.12"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-wtf = "^1.2.1"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pyright = "^1.1.342"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
