[tool.poetry]
name = "homework-6"
version = "0.1.0"
description = ""
authors = ["Maksim Aleksanin <maksim.g00gle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
databases = {extras = ["aiosqlite"], version = "^0.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
